--- a/MayChamCong/MayChamCong.csproj
+++ b/MayChamCong/MayChamCong.csproj
@@ -55,6 +55,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoSoDuLieu.cs" />
+    <Compile Include="DataInToFileExcelChuaCoTen.cs" />
+    <Compile Include="DataInToFileExcelFull.cs" />
+    <Compile Include="DuLieuLayTuThietBi.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
